--- a/#src/_footer.html
+++ b/#src/_footer.html
@@ -61,8 +61,7 @@
                     <p>Created by 2ndself.com, with <i class="fa fa-heart"></i></p>
                     <p>exclusive for theuncreativelab.com</p>
                     <div class="info-footer__copyrite">
-                        <img src="img/icons/copy.png" alt="">
-                        <span>2014 RESORT. All rights reserved</span>
+                        <span>&copy;2014 RESORT. All rights reserved</span>
                     </div>
                 </div>
             </div>
