--- a/#src/index.html
+++ b/#src/index.html
@@ -232,7 +232,7 @@
                         <div class="reservation__column">
                             <div class="reservation__item item">
                                 <span class="item__logo">
-                                    <img src="img/icons/logo_icon_white.png" alt="">
+                                    <img src="img/icons/logo_icon_w.png" alt="">
                                     <span>reservation</span>
                                 </span>
                                 <span class="item__image _ibg">
@@ -308,7 +308,7 @@
                 <section class="quest">
                     <div class="quest__item item item_b">
                         <span class="item__logo">
-                            <img src="img/icons/logo_icon_white.png" alt="">
+                            <img src="img/icons/logo_icon_w.png" alt="">
                             <span>BE OUR GUESTS</span>
                             <div class="item__text">
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas pellentesque justo ac
