--- a/#src/_footer.html
+++ b/#src/_footer.html
@@ -1,4 +1,4 @@
-<footer class="footer">
+<footer id="contacts_" class="footer">
     <div class="footer__row">
         <div class="footer__column footer__column_bg">
             <div class="footer__bg _ibg">
@@ -7,7 +7,7 @@
             <div class="footer__content footer__content_left content-footer">
                 <div class="content-footer__row">
                     <div class="content-footer__column">
-                        <img src="img/icons/logo_icon_white.png" alt="">
+                        <img src="img/icons/logo_icon_w.png" alt="">
                     </div>
                     <div class="content-footer__column">
                         <div class="content-footer__text">
