--- a/#src/_header.html
+++ b/#src/_header.html
@@ -4,19 +4,19 @@
             <div class="menu__body">
                 <ul class="menu__list">
                     <li class="menu__item">
-                        <a href="" class="menu__link">our resort</a>
+                        <a href="#resort_" class="menu__link">our resort</a>
                     </li>
                     <li class="menu__item">
-                        <a href="" class="menu__link">suites</a>
+                        <a href="#hotel" class="menu__link">suites</a>
                     </li>
                     <li class="menu__item">
-                        <a href="" class="menu__link">services</a>
+                        <a href="#servises_" class="menu__link">services</a>
                     </li>
                     <li class="menu__item">
-                        <a href="" class="menu__link">reservation</a>
+                        <a href="#reservation_" class="menu__link">reservation</a>
                     </li>
                     <li class="menu__item">
-                        <a href="" class="menu__link">contact</a>
+                        <a href="#contacts_" class="menu__link">contact</a>
                     </li>
                 </ul>
             </div>
