--- a/#src/index.html
+++ b/#src/index.html
@@ -29,7 +29,7 @@
                 </div>
             </div>
             <div class="content">
-                <section class="description description_first">
+                <section id="resort_" class="description description_first">
                     <div class="description__row">
                         <div class="description__column description__column_r">
                             <div class="description__item item">
@@ -166,7 +166,7 @@
                         </div>
                     </div>
                 </section>
-                <section class="servises">
+                <section id="servises_" class="servises">
                     <div class="servises__row">
                         <div class="servises__column">
                             <div class="servises__item item">
@@ -227,13 +227,13 @@
                         </div>
                     </div>
                 </section>
-                <div class="reservation">
+                <div id="reservation_" class="reservation">
                     <div class="reservation__row">
                         <div class="reservation__column">
                             <div class="reservation__item item">
                                 <span class="item__logo">
                                     <img src="img/icons/logo_icon_w.png" alt="">
-                                    <span>reservation</span>
+                                    <span class="item__title">reservation</span>
                                 </span>
                                 <span class="item__image _ibg">
                                     <img src="img/reservation/01.jpg" alt="">
@@ -293,7 +293,7 @@
                                             </div>
                                         </div>
                                         <div class="form-reserv__checkbox">
-                                            <input id="checkbox" type="checkbox" autocomplete="off" name="form[]"
+                                            <input id="checkbox" type="checkbox" name="form[]"
                                                 data-error="Заполните поле" class="checkbox ">
                                             <label for="checkbox" class="checkbox-label ">
                                                 <span class="fa fa-check"></span> Privacy</label>
@@ -309,11 +309,11 @@
                     <div class="quest__item item item_b">
                         <span class="item__logo">
                             <img src="img/icons/logo_icon_w.png" alt="">
-                            <span>BE OUR GUESTS</span>
-                            <div class="item__text">
+                            <span class="item__title">BE OUR GUESTS</span>
+                            <span class="item__text">
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas pellentesque justo ac
                                 velit facilisis convallis vel id nisi.
-                            </div>
+                            </span>
                         </span>
                         <span class="item__image _ibg">
                             <img src="img/guest/01.jpg" alt="">
